packages/typ/tests/fixtures/diagnostics/0926_gadt_equality_cast_mismatch_07.ml.expected
File "0926_gadt_equality_cast_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0926_gadt_equality_cast_mismatch_07 is not a valid module name.

File "0926_gadt_equality_cast_mismatch_07.ml", line 7, characters 18-22:
7 |     | Refl_eta -> true
                      ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
